--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -1,18 +1,17 @@
 \chapter{Problem Analysis} \label{cha:analysis}
 	% Includes the challenges surrounding AR and Networking.
 	% Also motivates the choices made.
-	This chapter provides an analysis of the problem description of problems
-	and challenges that may arise during development. It provides an analysis
-	of the problems and possible solutions that can be used in order to
-	solve these problems.
+	This chapter provides an overview of the issues and challenges that may
+	arise during development of a solution to the problem description. It
+	provides an analysis of the problems and possible solutions.
 
 	One of the core challenges of the project is the use of Augmented Reality
 	(AR) technology. An analysis of the available options to implement this
 	functionality is given in section \ref{sec:ar}. Another important challenge
 	is improving situational awareness, which is discussed in section
-	\ref{sec:awareness}. The last challenge is the creation of interdependence
-	between players in such a way that requires collaboration from all players.
-	This challenge is analyzed in section \ref{sec:interdependence}.
+	\ref{sec:awareness}. The final challenge is the creation of interdependence
+	between players in such a way that collaboration from all players is
+	required. This challenge is analyzed in section \ref{sec:interdependence}.
 
 	\section{Augmented Reality (AR) Functionality} \label{sec:ar}
 		% AR is a core element in the project. As such, we need to compare
@@ -34,9 +33,10 @@
 			%          - May interfere with the experience of the game.
 			%       - Optical see-through glasses means AR works out of the box.
 
-			The META One glasses are optical see-through glasses. Optical
-			see-through glasses work by projecting a virtual image on top of the
-			world you see, effectively implementing a 3D AR exprience.
+			The META One glasses are optical see-through glasses. \cite{metaone}
+			Optical see-through glasses work by projecting a virtual image on
+			top of the world you see, effectively implementing a 3D AR
+			exprience.
 
 			Because the META One is an optical see-through device that also
 			features motion tracking, AR can be implemented simply by
