Add reference to OR section and reword it a bit

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -44,3 +44,11 @@ year   = 2015,
 note   = "\url{https://www.getameta.com/},
           Accessed 28-April-2015"
 }
+
+@misc{riftdev,
+title  = "META One",
+author = "Oculus VR",
+year   = 2015,
+note   = "\url{https://developer.oculus.com/},
+          Accessed 28-April-2015"
+}
