--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -71,24 +71,23 @@
 			available. Each of these will be discussed in the next sections.
 
 			Oculus offers an SDK for Unity that makes it easy to integrate a
-			game with the Rift. The challenge that we'll be facing during
-			development is to properly integrate this SDK with the augmented
-			reality libraries. Each of the frameworks try to take control of the
-			camera in different ways and it's easy to get conflicts there.
-			Getting the Rift see-through functionality working in Unity on its
-			own and the augmented reality functionality on its own is not a
-			challenge.
+			game with the Rift. \cite{riftdev} The challenge that we'll be
+			facing during development is to properly integrate this SDK with the
+			augmented reality libraries. Each of the frameworks try to take
+			control of the camera in different ways and it's easy to get
+			conflicts there. Getting the Rift see-through functionality working
+			in Unity on its own and the augmented reality functionality on its
+			own is not a challenge.
 
-			The advantage of the Oculus rift with mounted cameras is that it
+			The advantage of the Oculus Rift with mounted cameras is that it
 			provides complete control over the screen allowing us to completely
-			block certain regions of view or project black objects. Another
-			advantage is that the field of view of the virtual world is the same
-			as that of the physical world. Disadvantages are that we must be
-			careful not to induce any extra latency because that would result in
-			the movements of the head and of the view no longer matching up. Yet
-			another disadvantage is that because the cameras are mounted on the
-			front of the Oculus Rift, the field of view of the physical world is
-			limited.
+			block certain regions of the view or project black objects. It also
+			causes the AR content to match up exactly with the real world in
+			terms of timing. The field of view is significantly larger as well.
+			
+			A disadvantage is the slight latency between head movements and the
+			view, which takes work to reduce to a minimum to avoid motion
+			sickness and bad hand-eye coordination.
 
 			\subsubsection{Vuforia} \label{sssec:vuforia}
 				%   - Vuforia (http://developer.vuforia.com/)
