Add references to Vuforia and Metaio sections

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -46,9 +46,25 @@ note   = "\url{https://www.getameta.com/},
 }
 
 @misc{riftdev,
-title  = "META One",
+title  = "Oculus Rift Development",
 author = "Oculus VR",
 year   = 2015,
 note   = "\url{https://developer.oculus.com/},
+          Accessed 28-April-2015"
+}
+
+@misc{vuforia,
+title  = "Vuforia",
+author = "Qualcomm",
+year   = 2015,
+note   = "\url{https://www.qualcomm.com/products/vuforia},
+          Accessed 28-April-2015"
+}
+
+@misc{metaio,
+title  = "Metaio",
+author = "Metaio",
+year   = 2015,
+note   = "\url{http://dev.metaio.com/sdk/tutorials/see-through-glasses/},
           Accessed 28-April-2015"
 }
