--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -94,12 +94,12 @@
 				%       - Includes integration with Unity
 				Vuforia is a framework by Qualcomm that allows you to create
 				arbitrary markers, import them into Unity and place objects onto
-				them. You can then select a webcam and have it render the camera
-				images with 3D objects projected onto the markers. It's very
-				easy to use and has built-in support for virtual reality
-				solutions like GearVR. The tracking quality is very good and
-				stable, even with low quality markers (with few color
-				transitions).
+				them. \cite{vuforia} You can then select a webcam and have it
+				render the camera images with 3D objects projected onto the
+				markers. It's very easy to use and has built-in support for
+				virtual reality solutions like GearVR. The tracking quality is
+				very good and stable, even with low quality markers (with few
+				color transitions).
 
 				Unfortunately it currently only works with the 32-bit version of
 				Unity. It also lacks support for the Oculus Rift on the desktop,
@@ -136,7 +136,7 @@
 				Metaio is a well-supported project, much like Vuforia. The
 				difference is that it has native support for see-through stereo
 				glasses, which makes it well suitable for both the META One and
-				Oculus Rift solution.
+				Oculus Rift solution. \cite{metaio}
 
 				Unlike any of the other solutions, this frameworks works
 				natively on Unity 64-bit. It does have the limit of only working
