Finish VuforiaTest for Oculus with 1 camera

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -153,8 +153,8 @@
 		(see chapter \ref{cha:problem}). As such, situational awareness plays a
 		key role in this project.
 
-		Before considering how situational awareness plays a role in this
-		project, it is important to define exactly what situational awareness
+		Before considering exactly how situational awareness plays a role in this
+		project, it is important to define precisely what situational awareness
 		means. According to \cite{endsley}, situational awareness is defined as
 		"the perception of the elements in the environment within a volume of
 		time and space, comprehension of their meaning, and the projection of
@@ -201,8 +201,8 @@
 			physically co-located and the virtually co-located) have different,
 			separate, parts of the information required to complete the game. In
 			this case, a "puppet master" scenario should also be avoided. Such a
-			scenario can occur here when one type of player has nearly all of
-			the information or can infer nearly all information.
+			scenario can occur here when one type of player has enough
+			information to infer nearly all information.
 
 		\subsection{Information overload}
 			Another reason for players to co-operate could be information
