Going to solve the merge conflict...

--- a/Reports/Research Report/VirtualCoLocation.tex
+++ b/Reports/Research Report/VirtualCoLocation.tex
@@ -34,10 +34,9 @@
 	\end{enumerate}
 	Of course a combination of several of the above methods is also possible.
 
-	In the end the goal of all of this is of course to make the remote player feel
+	In the end the goal of the project is of course to make the remote player feel
 	as if he is in the same location as the local player and make the local player
-	feel as if the remote player is really with him. So first of all we can look at
-	the visualization for the remote player:
+	feel as if the remote player is playing together with them. So first of all we can look at the visualization for the remote player:
 
 	One method is to provide an Oculus Rift to the remote player(s) and let them
 	see through the eyes of the local player(s). However, this is likely to cause
@@ -47,9 +46,7 @@
 
 	We can also let the remote player control one or more avatars within the game
 	world and view these through either the Oculus Rift or through a screen. This
-	would keep the remote player more interested by giving a higher feeling of
-	agency then just viewing through the eyes of the other player. However, this
-	comes at the cost of the feeling of connectivity. This would also require
+	would keep the remote player more interested as it would add a greater feeling of immersion than just watching through the eyes of the other player. However, this comes at the cost of the feeling of connectivity. This would also require
 	mapping out a large part of the scene in the virtual world.
 
 	Lastly we can also let the remote player view the world from a bird's-eye
@@ -59,9 +56,4 @@
 	to map the scene fully in the virtual world.
 
 	We should also look at how we can make the local player feel as if the remote
-	player is with him. One method is to heavily encourage communication. If you
-	are talking with someone it is hard to forget their existence. This can be
-	encouraged by providing appropriate communication channels such as voice or
-	text chat. Another important thing is that the remote player must visibly be
-	doing something. This can be achieved by giving him an avatar and by making
-	his actions visibly change the world.
+	player is playing together with him. One method is to heavily encourage communication. If you are talking with someone it is hard to forget their existence. This can be encouraged by providing appropriate communication channels such as voice or text chat. Another important thing is that the remote player must visibly be doing something. This can be achieved by giving him an avatar and by making his actions visibly change the world.
