Placed image in a figure environment and adjusted width to text width.

--- a/Reports/Research Report/Conclusion.tex
+++ b/Reports/Research Report/Conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion} \label{cha:conclusion}
 In short, the mirror game seems the best solution to the problem. It is a viable project
-to create in the given time frame, it is a challenging puzzle game even when playing a 
+to create in the given time frame, it is a challenging puzzle game even when playing a
 different version of it (a single-player version) on your own, and it taxes the communication
 of both the remote and the local players, as they both have abilities necessary for
 achieving the goal, but they cannot achieve it on their own (although this could be relaxed
@@ -13,13 +13,15 @@ The game and networking will be implemented using Unity, with the Vuforia librar
 handling augmented reality for the local players. The remote players will likely
 be using an Oculus Rift and the local players one of the augmented reality devices
 describes in the problem analysis that ends up working best in practice.
-	% Summarizes the Research Report and provides 
-	% an overview and conclusion of the technologies 
+	% Summarizes the Research Report and provides
+	% an overview and conclusion of the technologies
 	% we're going to use.
-	% TODO AR tech elaboration.	
+	% TODO AR tech elaboration.
 
 Using this information, we've built a small demo that uses Vuforia. It places
 a laser emitter, mirror and wall on three markers that can be moved around. The
 mirror reflects the laser realistically based on the angle of incidence.
 
-\includegraphics[scale=0.7]{demo.png}
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{demo.png}
+\end{figure}
