Improve research report a bit

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -68,3 +68,11 @@ year   = 2015,
 note   = "\url{http://dev.metaio.com/sdk/tutorials/see-through-glasses/},
           Accessed 28-April-2015"
 }
+
+@misc{cardboard,
+title  = "Cardboard",
+author = "Google",
+year   = 2015,
+note   = "\url{https://www.google.com/get/cardboard/},
+          Accessed 01-May-2015"
+}
