--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -23,9 +23,9 @@
 
 		We consider three choices for implementing AR functionality: The META
 		One (an optical see-through device (\ref{ssec:metaone})), the Oculus
-		Rift virtual reality glasses in conjunction with mounted cameras and a
-		smartphone with Google Cardboard.
-		(\ref{ssec:oculusrift}).
+		Rift virtual reality glasses in conjunction with mounted cameras
+		(\ref{ssec:oculusrift}) and a smartphone with Google Cardboard
+		(\ref{ssec:cardboard}).
 
 		% Hardware devices to consider:
 		\subsection{META One} \label{ssec:metaone}
@@ -144,12 +144,13 @@
 				with OpenGL, but we don't expect that to be a problem.
 
 		%   - ... <Add more as needed>
-		\subsection{Google Cardboard}
+		\subsection{Google Cardboard} \label{ssec:cardboard}
 
 		Google Cardboard can be used to implement the same concept for augmented
 		reality as the Oculus Rift. It allows you to turn a smartphone into a VR
 		headset by mounting lenses in front of it. This can then be used to
 		implement AR by overlaying 3D objects over the phone camera image.
+		\cite{cardboard}
 
 		The advantage of this approach over the Oculus Rift is that it's much
 		more convenient. The solution would be completely mobile, meaning that
