--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -104,6 +104,36 @@
 	number of extra abilities. This game shows heavy
 	information and ability asymmetry.
 
+\section{Minesweepers}
+	This concept is based on the classic game of minesweeper. There's a grid
+	where some of the squares have mines under them. Players each start at a
+	random position and have to place flags on locations of mines while avoiding
+	mines. The remote player is the only one who can see the numbers around
+	squares, so he has to give instructions to the players on the field.
+
+	The difference compared to the classic version of the game is that it's all
+	physical. Local players walk around on the field, where they have to take
+	careful steps to avoid triggering a mine. This turns the game into some sort
+	of Twister variant where people can use special moves to quickly traverse
+	the field and find all the mines. Local players co-operate by dividing the
+	field into sections that they'll clear in parallel.
+
+	The problem with this concept is the inherent *puppet master* phenomenon.
+	Communication between the remote player and local players is very one-sided.
+	Local players just receive commands where to step and where to plant flags
+	and don't really have any input into the game themselves. Even if that
+	problem was solved, the lack of cooperation aspects between local players
+	would also be a big problem. Local players don't really have any reason to
+	interact with each other. One way to solve that problem would be to require
+	multiple players to place a flag.
+
+	There are also some technical challenges with this concept. It requires that
+	local players always know their exact position on a large field that they're
+	inside of, which would require a lot of markers. Next, the position of their
+	legs would have to be determined somehow to ensure that they're not stepping
+	on a mine. Finally, a space large enough for a field would likely have to be
+	found outside and sunlight doesn't play well with augmented reality devices.
+
 \section{The chosen idea}
 	The idea that is chosen is the mirror game idea. The reason for this
 	decision is that it is a relatively simple idea, it can create hard
