Worked on tower defense part.

--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -96,10 +96,20 @@
 	positions to be able to defeat the enemies before they escape
 	by communicating the ideal locations of the
 	towers and paths that the hostile entities will take.
+	
+	This game idea is relatively simple, and because of the simplicity,
+	complexity can easily be added to make the game more engaging. For
+	example, towers could be upgradeable, utilizing resources that
+	could be gained either by defeating individual enemies or by defeating
+	a wave of enemies. These resources could then be used to upgrade
+	tower types. As these resources are shared, and they can only be
+	used once, players must work together to choose the best upgrade
+	available in the given scenario. Enemies should also get procedurally
+	stronger because of the increased capabilities of the towers.
 
 	The problem with this idea is that it will very likely create a
 	"puppet master" scenario where the remote player takes charge
-	of the whole situation and the other players do net get a
+	of the whole situation and the other players do not get a
 	say in what is going to happen. This could be avoided by a
 	number of extra abilities. This game shows heavy
 	information and ability asymmetry.
