Expanded Platformer solution and FPS Survival solution sections.

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -85,7 +85,7 @@
 			block certain regions of the view or project black objects. It also
 			causes the AR content to match up exactly with the real world in
 			terms of timing. The field of view is significantly larger as well.
-			
+
 			A disadvantage is the slight latency between head movements and the
 			view, which takes work to reduce to a minimum to avoid motion
 			sickness and bad hand-eye coordination.
@@ -204,7 +204,7 @@
 		\cite{zagal}. One way to do this is to create an asymmetry of abilities.
 		Other ways to create interdependence are explained in the following
 		subsections.
-		\subsection{Asymmetry of abilities}
+		\subsection{Asymmetry of abilities} \label{ssec:ability}
 			The main reason to co-operate is the asymmetry of abilities between
 			the players involved. For example: physically co-located players can
 			alter the game world, while virtually co-located players can guide
@@ -215,7 +215,7 @@
 			execute these tasks. In this case, the other players will have less
 			involvement with the shared goal, and the amount of co-operation
 			will go down.
-		\subsection{Asymmetry of information}
+		\subsection{Asymmetry of information} \label{ssec:information}
 			Asymmetry of information could be used as another reason for the
 			players to co-operate. It means that both types of players (both the
 			physically co-located and the virtually co-located) have different,
@@ -224,7 +224,7 @@
 			scenario can occur here when one type of player has enough
 			information to infer nearly all information.
 
-		\subsection{Information overload}
+		\subsection{Information overload} \label{ssec:overload}
 			Another reason for players to co-operate could be information
 			overload. This means that, while the game could technically be
 			completed by a single player, the amount of incoming information is
