Added note about indoor version of Minesweeper.

--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -148,6 +148,8 @@
 	legs would have to be determined somehow to ensure that they're not stepping
 	on a mine. Finally, a space large enough for a field would likely have to be
 	found outside and sunlight doesn't play well with augmented reality devices.
+	The game could be tranformed into an indoor variant instead, using a board
+	and pawns, but this does not solve the one-sided communication problem.
 
 \section{The chosen idea} \label{sec:chosenidea}
 	The idea that is chosen is the mirror game idea. The reason for this
