--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -101,11 +101,22 @@
 	complexity can easily be added to make the game more engaging. For
 	example, towers could be upgradeable, utilizing resources that
 	could be gained either by defeating individual enemies or by defeating
-	a wave of enemies. These resources could then be used to upgrade
+	a wave of enemies. The idea behind these resources is that they are 
+	shared between players. They could then be used to upgrade
 	tower types. As these resources are shared, and they can only be
 	used once, players must work together to choose the best upgrade
 	available in the given scenario. Enemies should also get procedurally
-	stronger because of the increased capabilities of the towers.
+	stronger because of the increased capabilities of the towers. Resources
+	could also be put towards research for new tower types, which players 
+	could then use.
+	
+	Another way to add extra necessary complexity would be through
+	introducing an XP system, and to grant towers some XP based on what enemy
+	they have killed. These towers would also over time get procedurally
+	stronger. Bloons Tower Defense, a game found on the internet, is a tower
+	defense system that uses both resources and XP, to show that these could
+	also be combined.  New towers would then be unlocked over time, after
+	completing a certain amount of waves, instead of using resources.
 
 	The problem with this idea is that it will very likely create a
 	"puppet master" scenario where the remote player takes charge
