Added a semi-reference to Ninja Kiwi.

--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -118,10 +118,7 @@
 	Another way to add extra necessary complexity would be through
 	introducing an experience system, and to grant towers some experience based
 	on what enemy they have defeated. These towers would also over time get
-	stronger. Bloons Tower Defense, a game found on the internet, is a tower
-	defense system that uses both resources and experience, to show that these
-	could also be combined. New towers would then be unlocked over time, after
-	completing a certain amount of waves, instead of using resources.
+	stronger. Bloons Tower Defense, a game found on the internet developed by Ninja Kiwi, is a tower defense game that uses both resources and experience, to show that these could also be combined. New towers would then be unlocked over time, after completing a certain amount of waves, instead of using resources.
 
 	The problem with this idea is that it will very likely create a
 	\emph{puppet master} scenario where the remote player takes charge
