Added paragraph to The Chosen Idea section further explaining the choice.

--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -168,3 +168,10 @@
 	to solve puzzles, and extra complexity can easily be added. It also
 	prevents a \emph{puppet master} scenario by giving both types of players
 	about half of the abilities required for solving the game.
+
+	The game offers a strong interdependence between players. This, together
+	with the ability asymmetry caused by the separation between moving mirrors
+	and rotating them, causes a high need for collaboration between the local
+	and remote players. As such, this concept comes closest to the problem
+	formulation in creating a collaborative game between physically remote
+	players.
