Add reference to graphical QR codes

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -76,3 +76,11 @@ year   = 2015,
 note   = "\url{https://www.google.com/get/cardboard/},
           Accessed 01-May-2015"
 }
+
+@misc{gqr,
+title  = "Graphical QR codes",
+author = "Visualead",
+year   = 2015,
+note   = "\url{http://nl.visualead.com/},
+          Accessed 01-May-2015"
+}
