--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -187,7 +187,8 @@
 			aesthetically pleasing to the players, but the performance may be
 			worse than specially designed patterns. For that reason, we're going
 			to use a hybrid form that combines an easy to scan pattern with a
-			nice looking image of the object it represents (like a mirror).
+			nice looking image of the object it represents (like a mirror). An
+			example of this concept are graphical QR codes. \cite{gqr}
 
 	\section{Situational Awareness} \label{sec:awareness}
 		% Improving situational awareness is part of the main goal of the
