Added \usepackage statements for bibliography and graphics.

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -1,9 +1,14 @@
 \documentclass[]{report}
+\usepackage[english]{babel}
 
+\usepackage{url}
+\usepackage{cite}
+\usepackage{graphicx}
+\bibliographystyle{apalike}
 
 % Title Page
 \title{Augmented Reality mirror game}
-\author{Thijs Boumans \and Patrick Kramer \and 
+\author{Thijs Boumans \and Patrick Kramer \and
         Alexander Overvoorde \and Tim van Rossum}
 
 
@@ -14,4 +19,4 @@
 This report describes the procedure of development of an augmented reality game for the TU Delft.
 \end{abstract}
 
-\end{document}          
+\end{document}
