Added Orientation and Design chapter layout.

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -19,4 +19,7 @@
 This report describes the procedure of development of an augmented reality game for the TU Delft.
 \end{abstract}
 
+\input{Orientation.tex}
+\input{Design.tex}
+
 \end{document}
