--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -17,6 +17,9 @@
 
 \begin{abstract}
 This report describes the procedure of development of an augmented reality game for the TU Delft.
+This game, called the \emph{Augmented Reality Mirror Game}, is a game that uses augmented reality 
+technology to simulate lasers, mirrors, a target (or multiple targets), and walls. The goal of 
+this game is to use mirrors to deflect the laser beam coming from the laser to the target. TODO add description of the chapters.
 \end{abstract}
 
 \input{Orientation.tex}
