Added general structure of Orientation chapter.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -1,1 +1,31 @@
 \chapter{Orientation} \label{cha:orientation}
+
+  This chapter provides an overview of the orientation phase of the project.
+  It shows an analysis of the project requirements, and the decisions that
+  have been made during the project regarding choices of frameworks and
+  libraries as well as gameplay elements.
+
+  For a more in-depth view on the research that has been done leading to
+  these decisions, please refer to the Research Report in appendix
+  \ref{app:researchreport}.
+
+  \section{Project Description} \label{sec:projectdescription}
+    % TODO: Write description of the project.
+    %       This can be similar to the problem formulation in the Research
+    %       Report.
+
+  \section{Final Product} \label{sec:finalproduct}
+    % TODO: Write description of the final project.
+
+  \section{Software Design Methods} \label{sec:designmethods}
+    This section describes the design methods that were used during the
+    project. It illustrates the methods that were used to develop and
+    coordinate the project during the development phase.
+
+    \subsection{Design Process} \label{ssec:designprocess}
+      % TODO: Write about Scrum
+
+    \subsection{Design Architecture} \label{ssec:designarchitecture}
+      % TODO: Write about Unity
+
+    \subsection{} \label{sec:}
