Added comment to Organization section and removed empty section

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -25,7 +25,9 @@
     \subsection{Design Process} \label{ssec:designprocess}
       % TODO: Write about Scrum
 
+    \subsection{Organization} \label{sec:organization}
+      % TODO: Write about organization of the development team.
+      %       This also includes use of Git, Licensing and Trello.
+
     \subsection{Design Architecture} \label{ssec:designarchitecture}
       % TODO: Write about Unity
-
-    \subsection{} \label{sec:}
