Added design process section to Orientation chapter.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -23,7 +23,20 @@
     coordinate the project during the development phase.
 
     \subsection{Design Process} \label{ssec:designprocess}
-      % TODO: Write about Scrum
+      In designing and implementing the product, it is important that
+      requirements can be changed quickly and without much problems. This is
+      not because the requirements are likely to change from the client
+      side, but because the choice of AR technology may change over the
+      course of the project because of technical issues. The available Virtual
+      and Augmented Reality glasses are mostly still in development, and as
+      such this may affect the technical viability of each device.
+
+      To deal with such changes, we use the Scrum methodology. The Scrum
+      methodology describes a set of rules that, amongst others, makes it
+      easier to deal with various changes during the development process.
+      For a complete description of the rules that the Scrum methodology
+      describes, please refer to the Scrum guide, available at
+      \url{http://www.scrumguides.org/scrum-guide.html}.
 
     \subsection{Organization} \label{sec:organization}
       % TODO: Write about organization of the development team.
