Design document structure updated.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -1,1 +1,13 @@
 \chapter{Design} \label{cha:design}
+	This chapter explains the design of the system. This includes: back-end
+	design, model design, design choices, etc. 
+	\section{Back-end design}
+	% TODO Unity, C#, MonoDevelop (maybe?)
+	
+	
+	\section{Graphical design}
+	% TODO Blender
+	
+	
+	\section{Main activities}
+	% TODO Elaborate on physical/virtual co-location.
