Added Design Architecture section to Orientation chapter.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -38,9 +38,16 @@
       describes, please refer to the Scrum guide, available at
       \url{http://www.scrumguides.org/scrum-guide.html}.
 
-    \subsection{Organization} \label{sec:organization}
+    \subsection{Organization} \label{ssec:organization}
       % TODO: Write about organization of the development team.
       %       This also includes use of Git, Licensing and Trello.
 
     \subsection{Design Architecture} \label{ssec:designarchitecture}
-      % TODO: Write about Unity
+      Because the product is a game, and the goal of the project is more
+      focused on the game mechanics rather than the underlying engine, we chose
+      to use Unity as a starting point. Unity provides a platform-independant
+      IDE for developing games, and offers many features commonly used in
+      games. Using Unity means that the project architecture is bound to the
+      loosely coupled component-based architecture that Unity provides,
+      although it is possible to include principles from Object-Oriented
+      programming to some extent.
