--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -1,13 +1,31 @@
 \chapter{Design} \label{cha:design}
 	This chapter explains the design of the system. This includes: back-end
-	design, model design, design choices, etc. 
-	\section{Back-end design}
+	design, model/graphical design, and main activities.
+	\section{Main activities} \label{sec:mainactivities}
+	There are several main activities in the system, corresponding to the two
+	main user types of the system. These user types are both the physically co-
+	located	players as well as the physically remote players. The activities
+	are as follows:
+		\subsection{User wants to start a game} \label{ssec:userstartgame}
+		A user (or player) wants to start a new game. This user can be either
+		a physically co-located player or a physically remote player. In
+		order to start a new game, the user has to click the correct buttons
+		on the start screen. Clicking the buttons can only happen on a laptop,
+		but that should not be a problem considering the user needs to be near
+		their laptop anyway to view the game world from an Oculus Rift or a
+		META One, the two tools required to play the game with. When the game
+		is started, other users, both physically co-located and physically
+		remote, can join the same session to play the game together.
+		\subsection{Physically remote user wants to join a started game}
+		A physically remote player wants to join an active game. Before
+		this can happen, a game has to be started first. As mentioned
+		before, both physically co-located players and physically remote
+		players can start a game session which other players can join. 
+	
+	
+	\section{Back-end design} \label{sec:backenddesign}
 	% TODO Unity, C#, MonoDevelop (maybe?)
 	
 	
-	\section{Graphical design}
+	\section{Graphical design} \label{sec:graphicaldesign}
 	% TODO Blender
-	
-	
-	\section{Main activities}
-	% TODO Elaborate on physical/virtual co-location.
