Added Organization section to Orientation chapter.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -15,7 +15,7 @@
     %       Report.
 
   \section{Final Product} \label{sec:finalproduct}
-    % TODO: Write description of the final project.
+    % TODO: Write description of the final product.
 
   \section{Software Design Methods} \label{sec:designmethods}
     This section describes the design methods that were used during the
@@ -39,15 +39,31 @@
       \url{http://www.scrumguides.org/scrum-guide.html}.
 
     \subsection{Organization} \label{ssec:organization}
-      % TODO: Write about organization of the development team.
-      %       This also includes use of Git, Licensing and Trello.
+      To be able to simulaneously work on the project without conflicts, we
+      use Git as a version control system. The project is stored remotely on
+      Github, ensuring the work is efficiently shared between all team members.
+
+      To coordinate and divide the tasks, as well as to maintain the items in
+      the Scrum backlog, we use Trello. Trello is an online service that
+      provides a dynamic way to organize items in various lists. We created
+      lists to keep track of which items were in the backlog, which items were
+      being worked on and which items were already done.
+
+      The project is licensed under the terms of the MIT license. We chose
+      this license because it allows other developers to learn from this
+      project. Additionally, since this project is done as a part of a
+      research project, we believe making this project open source may
+      help future researchers in the same field. The full terms of the MIT
+      license can be found at \url{http://opensource.org/licenses/mit-license.html}
 
     \subsection{Design Architecture} \label{ssec:designarchitecture}
-      Because the product is a game, and the goal of the project is more
+      Because the product is a game and the goal of the project is more
       focused on the game mechanics rather than the underlying engine, we chose
       to use Unity as a starting point. Unity provides a platform-independant
       IDE for developing games, and offers many features commonly used in
-      games. Using Unity means that the project architecture is bound to the
+      games.
+
+      Using Unity means that the project architecture is bound to the
       loosely coupled component-based architecture that Unity provides,
-      although it is possible to include principles from Object-Oriented
+      although it is possible to include principles from object-oriented
       programming to some extent.
