--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -10,12 +10,61 @@
   \ref{app:researchreport}.
 
   \section{Project Description} \label{sec:projectdescription}
-    % TODO: Write description of the project.
-    %       This can be similar to the problem formulation in the Research
-    %       Report.
+    While augmented reality research has grown into a mature field over the
+    last years, the aspects of situational awareness and presence of
+    augmented reality (AR) are still quite open research topics. This
+    project is about designing and implementing a collaborative game to
+    explore the different perception of situational awareness, presence and
+    workload in a physical and an AR environment. The game is to be employed
+    as an approximation of collaboratively solving complex problems, as they
+    occur in crime scene investigation when using virtual co-location, i.e.
+    expert remote crime scene investigators to guide local investigators in
+    AR to collaboratively analyse the crime scene.
 
   \section{Final Product} \label{sec:finalproduct}
-    % TODO: Write description of the final product.
+    The goal of the game is to solve a puzzle by controlling laser beams
+    using mirrors in such a way that a predefined target is hit. The game
+    can be played by one or more local players and one or more remote players.
+
+    There are cards present for the local players that represent mirror
+    bases. These must be placed on the table, which will be the locations
+    for the mirrors. The local players will be able to see the mirrors they
+    place through the use of AR technology. Each of the local players will
+    only be given a few of the mirror bases needed to solve the puzzle, and
+    as such solving the puzzle requires cooperation from all local players.
+
+    The remote players can also see the placed mirrors, and can rotate them
+    to influence the path of the laser beam(s). Only by cooperation between
+    local players (who can only move the mirror bases) and remote players
+    (who can only rotate them) it becomes possible to hit the target and as
+    such solve the puzzle.
+
+    The game provides various different types of mirrors with different
+    properties, allowing for more complex puzzles. One example of such a
+    mirror is a colored mirror, and then require the target is hit with the
+    right (combination of) colors. Another way to make puzzles more complex
+    is requiring that the players combine beams together to create more
+    powerful beams. Other optical components like beam splitters can also be introduced.
+
+    The game is designed to stimulate cooperation between the physically
+    co-located players and the physically remote player(s). It does so by
+    dividing abilities required for solving the puzzles amongst all players
+    as follows:
+
+    \begin{itemize}
+      \item Physically co-located players each get only a part of the
+            mirror bases required to solve the puzzle, requiring input
+            from all of these players.
+      \item If there are multiple virtually co-located players, each of
+            these players can only rotate a subset of the mirrors, and
+            as such input from all virtually co-located players is
+            required for solving the puzzle.
+      \item Virtually co-located players have the ability to rotate
+            mirrors while the physically co-located players do not have
+            this ability, requiring input from both physically as well
+            as virtually co-located players.
+    \end{itemize}
+
 
   \section{Software Design Methods} \label{sec:designmethods}
     This section describes the design methods that were used during the
